[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsno"
version = "1.0.4"
description = "Convert Python data to and from json-compatible data structures"
readme = "README.md"
authors = [{ name = "Pekka Uronen", email = "pekka.uronen@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["json"]
dependencies = []
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "coverage"]

[project.urls]
Homepage = "https://github.com/pek/jsno"

[tool.setuptools]
packages=["jsno"]
