[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsno"
version = "1.3.1"
description = "Convert Python data to and from json-compatible data structures"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["json"]
dependencies = []
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "coverage"]

[project.urls]
Homepage = "https://github.com/pek/jsno"

[tool.setuptools]
packages=["jsno"]
